// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel expect to render 1`] = `
<div
  className="ais-Panel"
>
  <div
    className="ais-Panel-body"
  >
    <div>
      Hello content
    </div>
  </div>
</div>
`;

exports[`Panel expect to render when setCanRefine is called 1`] = `
<div
  className="ais-Panel"
>
  <div
    className="ais-Panel-body"
  >
    <div>
      Hello content
    </div>
  </div>
</div>
`;

exports[`Panel expect to render when setCanRefine is called 2`] = `
<div
  className="ais-Panel ais-Panel--noRefinement"
>
  <div
    className="ais-Panel-body"
  >
    <div>
      Hello content
    </div>
  </div>
</div>
`;

exports[`Panel expect to render with custom className 1`] = `
<div
  className="ais-Panel ais-Panel-Breadcrumb"
>
  <div
    className="ais-Panel-body"
  >
    <div>
      Hello content
    </div>
  </div>
</div>
`;

exports[`Panel expect to render with footer 1`] = `
<div
  className="ais-Panel"
>
  <div
    className="ais-Panel-body"
  >
    <div>
      Hello content
    </div>
  </div>
  <div
    className="ais-Panel-footer"
  >
    <p>
      Footer
    </p>
  </div>
</div>
`;

exports[`Panel expect to render with header 1`] = `
<div
  className="ais-Panel"
>
  <div
    className="ais-Panel-header"
  >
    <p>
      Header
    </p>
  </div>
  <div
    className="ais-Panel-body"
  >
    <div>
      Hello content
    </div>
  </div>
</div>
`;

exports[`Panel expect to render without refinement 1`] = `
<div
  className="ais-Panel ais-Panel--noRefinement"
>
  <div
    className="ais-Panel-body"
  >
    <div>
      Hello content
    </div>
  </div>
</div>
`;
